@@ -1,51 +1,56 @@
 package io.quarkus.maven;
 
-import static java.util.stream.Collectors.joining;
+import static org.twdata.maven.mojoexecutor.MojoExecutor.artifactId;
+import static org.twdata.maven.mojoexecutor.MojoExecutor.configuration;
+import static org.twdata.maven.mojoexecutor.MojoExecutor.executeMojo;
+import static org.twdata.maven.mojoexecutor.MojoExecutor.executionEnvironment;
+import static org.twdata.maven.mojoexecutor.MojoExecutor.goal;
+import static org.twdata.maven.mojoexecutor.MojoExecutor.groupId;
+import static org.twdata.maven.mojoexecutor.MojoExecutor.plugin;
+import static org.twdata.maven.mojoexecutor.MojoExecutor.version;
 
-import java.io.ByteArrayOutputStream;
-import java.io.DataOutputStream;
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.ObjectOutputStream;
-import java.net.InetAddress;
-import java.net.MalformedURLException;
-import java.net.Socket;
-import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
-import java.util.jar.Attributes;
-import java.util.jar.Manifest;
 import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
-import java.util.zip.ZipOutputStream;
+import java.util.zip.ZipFile;
 
 import org.apache.maven.artifact.Artifact;
 import org.apache.maven.execution.MavenSession;
 import org.apache.maven.model.Dependency;
 import org.apache.maven.model.Plugin;
+import org.apache.maven.model.PluginExecution;
+import org.apache.maven.model.Resource;
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.BuildPluginManager;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
+import org.apache.maven.plugin.descriptor.MojoDescriptor;
+import org.apache.maven.plugin.logging.Log;
 import org.apache.maven.plugins.annotations.Component;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.plugins.annotations.ResolutionScope;
 import org.apache.maven.project.MavenProject;
+import org.apache.maven.shared.utils.cli.CommandLineUtils;
+import org.apache.maven.toolchain.Toolchain;
+import org.apache.maven.toolchain.ToolchainManager;
 import org.codehaus.plexus.util.xml.Xpp3Dom;
 import org.eclipse.aether.RepositorySystem;
 import org.eclipse.aether.RepositorySystemSession;
@@ -60,14 +65,18 @@ import org.eclipse.aether.resolution.DependencyRequest;
 import org.eclipse.aether.resolution.DependencyResolutionException;
 import org.eclipse.aether.resolution.DependencyResult;
 import org.eclipse.aether.util.artifact.JavaScopes;
-import org.twdata.maven.mojoexecutor.MojoExecutor;
 
+import io.quarkus.bootstrap.devmode.DependenciesFilter;
+import io.quarkus.bootstrap.model.AppArtifactKey;
+import io.quarkus.bootstrap.model.AppModel;
+import io.quarkus.bootstrap.resolver.maven.options.BootstrapMavenOptions;
 import io.quarkus.bootstrap.resolver.maven.workspace.LocalProject;
-import io.quarkus.dev.DevModeContext;
-import io.quarkus.dev.DevModeMain;
+import io.quarkus.deployment.dev.DevModeContext;
+import io.quarkus.deployment.dev.DevModeMain;
+import io.quarkus.deployment.dev.QuarkusDevModeLauncher;
+import io.quarkus.maven.MavenDevModeLauncher.Builder;
 import io.quarkus.maven.components.MavenVersionEnforcer;
 import io.quarkus.maven.utilities.MojoUtils;
-import io.quarkus.utilities.JavaBinFinder;
 
 /**
  * The dev mojo, that runs a quarkus app in a forked process. A background compilation process is launched and any changes are
@@ -77,6 +86,10 @@ import io.quarkus.utilities.JavaBinFinder;
  */
 @Mojo(name = "dev", defaultPhase = LifecyclePhase.PREPARE_PACKAGE, requiresDependencyResolution = ResolutionScope.COMPILE_PLUS_RUNTIME)
 public class DevMojo extends AbstractMojo {
+
+    private static final String EXT_PROPERTIES_PATH = "META-INF/quarkus-extension.properties";
+
+    private static final String KOTLIN_MAVEN_PLUGIN_GA = "org.jetbrains.kotlin:kotlin-maven-plugin";
 
     /**
      * running any one of these phases means the compile phase will have been run, if these have
@@ -101,8 +114,14 @@ public class DevMojo extends AbstractMojo {
             "install",
             "deploy"));
 
+    private static final String QUARKUS_PLUGIN_GROUPID = "io.quarkus";
+    private static final String QUARKUS_PLUGIN_ARTIFACTID = "quarkus-maven-plugin";
+    private static final String QUARKUS_GENERATE_CODE_GOAL = "generate-code";
+
     private static final String ORG_APACHE_MAVEN_PLUGINS = "org.apache.maven.plugins";
     private static final String MAVEN_COMPILER_PLUGIN = "maven-compiler-plugin";
+    private static final String MAVEN_RESOURCES_PLUGIN = "maven-resources-plugin";
+    private static final String MAVEN_TOOLCHAINS_PLUGIN = "maven-toolchains-plugin";
 
     private static final String ORG_JETBRAINS_KOTLIN = "org.jetbrains.kotlin";
     private static final String KOTLIN_MAVEN_PLUGIN = "kotlin-maven-plugin";
@@ -168,6 +187,9 @@ public class DevMojo extends AbstractMojo {
     @Parameter(defaultValue = "${suspend}")
     private String suspend;
 
+    @Parameter(defaultValue = "${debugHost}")
+    private String debugHost;
+
     @Parameter(defaultValue = "${project.build.directory}")
     private File buildDir;
 
@@ -179,6 +201,15 @@ public class DevMojo extends AbstractMojo {
 
     @Parameter(defaultValue = "${jvm.args}")
     private String jvmArgs;
+
+    @Parameter(defaultValue = "${quarkus.args}")
+    private String argsString;
+
+    @Parameter
+    private Map<String, String> environmentVariables = Collections.emptyMap();
+
+    @Parameter
+    private Map<String, String> systemProperties = Collections.emptyMap();
 
     @Parameter(defaultValue = "${session}")
     private MavenSession session;
@@ -231,77 +262,59 @@ public class DevMojo extends AbstractMojo {
     @Parameter(defaultValue = "${maven.compiler.target}")
     private String target;
 
+    /**
+     * Whether or not to enforce the quarkus-maven-plugin build goal to be configured.
+     * By default, a missing build goal is considered an inconsistency (although the build goal is not <i>required</i>
+     * technically).
+     * In this case a warning will be logged and the application will not be started.
+     */
+    @Parameter(defaultValue = "${quarkus.enforceBuildGoal}")
+    private boolean enforceBuildGoal = true;
+
     @Component
     private WorkspaceReader wsReader;
 
     @Component
     private BuildPluginManager pluginManager;
 
+    private Boolean debugPortOk;
+
+    @Component
+    private ToolchainManager toolchainManager;
+
+    @Override
+    public void setLog(Log log) {
+        super.setLog(log);
+        MojoLogger.delegate = log;
+    }
+
     @Override
     public void execute() throws MojoFailureException, MojoExecutionException {
 
         mavenVersionEnforcer.ensureMavenVersion(getLog(), session);
 
+        initToolchain();
+
         //we always want to compile if needed, so if it is run from the parent it will compile dependent projects
         handleAutoCompile();
 
-        Plugin pluginDef = MojoUtils.checkProjectForMavenBuildPlugin(project);
+        if (enforceBuildGoal) {
+            Plugin pluginDef = MojoUtils.checkProjectForMavenBuildPlugin(project);
 
-        if (pluginDef == null) {
-            getLog().warn("The quarkus-maven-plugin build goal was not configured for this project, " +
-                    "skipping quarkus:dev as this is assumed to be a support library. If you want to run quarkus dev" +
-                    " on this project make sure the quarkus-maven-plugin is configured with a build goal.");
-            return;
-        }
-
-        if (!sourceDir.isDirectory()) {
-            getLog().warn("The project's sources directory does not exist " + sourceDir);
+            if (pluginDef == null) {
+                getLog().warn("The quarkus-maven-plugin build goal was not configured for this project, " +
+                        "skipping quarkus:dev as this is assumed to be a support library. If you want to run quarkus dev" +
+                        " on this project make sure the quarkus-maven-plugin is configured with a build goal.");
+                return;
+            }
         }
 
         try {
-            List<String> args = new ArrayList<>();
-            String javaTool = JavaBinFinder.findBin();
-            getLog().debug("Using javaTool: " + javaTool);
-            args.add(javaTool);
-            if (this.suspend != null) {
-                switch (this.suspend.toLowerCase(Locale.ENGLISH)) {
-                    case "n":
-                    case "false": {
-                        suspend = "n";
-                        break;
-                    }
-                    case "y":
-                    case "true": {
-                        suspend = "y";
-                        break;
-                    }
-                    default: {
-                        getLog().warn(
-                                "Ignoring invalid value \"" + suspend + "\" for \"suspend\" param and defaulting to \"n\"");
-                        suspend = "n";
-                        break;
-                    }
-                }
-            } else {
-                suspend = "n";
-            }
 
-            if (jvmArgs != null) {
-                args.addAll(Arrays.asList(jvmArgs.split(" ")));
-            }
-
-            // the following flags reduce startup time and are acceptable only for dev purposes
-            args.add("-XX:TieredStopAtLevel=1");
-            if (!preventnoverify) {
-                args.add("-Xverify:none");
-            }
-
-            DevModeRunner runner = new DevModeRunner(args);
-
-            runner.prepare();
+            DevModeRunner runner = new DevModeRunner();
+            Map<Path, Long> pomFiles = readPomFileTimestamps(runner);
             runner.run();
             long nextCheck = System.currentTimeMillis() + 100;
-            Map<Path, Long> pomFiles = readPomFileTimestamps(runner);
             for (;;) {
                 //we never suspend after the first run
                 suspend = "n";
@@ -309,21 +322,26 @@ public class DevMojo extends AbstractMojo {
                 Thread.sleep(sleep);
                 if (System.currentTimeMillis() > nextCheck) {
                     nextCheck = System.currentTimeMillis() + 100;
-                    if (!runner.process.isAlive()) {
+                    if (!runner.alive()) {
+                        if (runner.exitValue() != 0) {
+                            throw new MojoExecutionException("Dev mode process did not complete successfully");
+                        }
                         return;
                     }
-                    boolean changed = false;
+                    final Set<Path> changed = new HashSet<>();
                     for (Map.Entry<Path, Long> e : pomFiles.entrySet()) {
                         long t = Files.getLastModifiedTime(e.getKey()).toMillis();
                         if (t > e.getValue()) {
-                            changed = true;
+                            changed.add(e.getKey());
                             pomFiles.put(e.getKey(), t);
                         }
                     }
-                    if (changed) {
-                        DevModeRunner newRunner = new DevModeRunner(args);
+                    if (!changed.isEmpty()) {
+                        getLog().info("Changes detected to " + changed + ", restarting dev mode");
+                        final DevModeRunner newRunner;
                         try {
-                            newRunner.prepare();
+                            triggerCompile();
+                            newRunner = new DevModeRunner();
                         } catch (Exception e) {
                             getLog().info("Could not load changed pom.xml file, changes not applied", e);
                             continue;
@@ -344,7 +362,12 @@ public class DevMojo extends AbstractMojo {
     private void handleAutoCompile() throws MojoExecutionException {
         //we check to see if there was a compile (or later) goal before this plugin
         boolean compileNeeded = true;
+        boolean prepareNeeded = true;
         for (String goal : session.getGoals()) {
+            if (goal.endsWith("quarkus:prepare")) {
+                prepareNeeded = false;
+            }
+
             if (POST_COMPILE_PHASES.contains(goal)) {
                 compileNeeded = false;
                 break;
@@ -356,50 +379,109 @@ public class DevMojo extends AbstractMojo {
 
         //if the user did not compile we run it for them
         if (compileNeeded) {
-            // compile the Kotlin sources if needed
-            final String kotlinMavenPluginKey = ORG_JETBRAINS_KOTLIN + ":" + KOTLIN_MAVEN_PLUGIN;
-            final Plugin kotlinMavenPlugin = project.getPlugin(kotlinMavenPluginKey);
-            if (kotlinMavenPlugin != null) {
-                executeCompileGoal(kotlinMavenPlugin, ORG_JETBRAINS_KOTLIN, KOTLIN_MAVEN_PLUGIN);
+            if (prepareNeeded) {
+                triggerPrepare();
             }
-
-            // Compile the Java sources if needed
-            final String compilerPluginKey = ORG_APACHE_MAVEN_PLUGINS + ":" + MAVEN_COMPILER_PLUGIN;
-            final Plugin compilerPlugin = project.getPlugin(compilerPluginKey);
-            if (compilerPlugin != null) {
-                executeCompileGoal(compilerPlugin, ORG_APACHE_MAVEN_PLUGINS, MAVEN_COMPILER_PLUGIN);
-            }
+            triggerCompile();
         }
     }
 
-    private void executeCompileGoal(Plugin plugin, String groupId, String artifactId) throws MojoExecutionException {
-        Xpp3Dom configuration = MojoExecutor.configuration();
-        Xpp3Dom pluginConfiguration = (Xpp3Dom) plugin.getConfiguration();
-        if (pluginConfiguration != null) {
-            //Filter out `test*` configurations
-            for (Xpp3Dom child : pluginConfiguration.getChildren()) {
-                if (!child.getName().startsWith("test")) {
-                    configuration.addChild(child);
-                }
-            }
+    private void initToolchain() throws MojoExecutionException {
+        executeIfConfigured(ORG_APACHE_MAVEN_PLUGINS, MAVEN_TOOLCHAINS_PLUGIN, "toolchain");
+    }
+
+    private void triggerPrepare() throws MojoExecutionException {
+        executeIfConfigured(QUARKUS_PLUGIN_GROUPID, QUARKUS_PLUGIN_ARTIFACTID, QUARKUS_GENERATE_CODE_GOAL);
+    }
+
+    private void triggerCompile() throws MojoExecutionException {
+        handleResources();
+
+        // compile the Kotlin sources if needed
+        executeIfConfigured(ORG_JETBRAINS_KOTLIN, KOTLIN_MAVEN_PLUGIN, "compile");
+
+        // Compile the Java sources if needed
+        executeIfConfigured(ORG_APACHE_MAVEN_PLUGINS, MAVEN_COMPILER_PLUGIN, "compile");
+    }
+
+    /**
+     * Execute the resources:resources goal if resources have been configured on the project
+     */
+    private void handleResources() throws MojoExecutionException {
+        List<Resource> resources = project.getResources();
+        if (resources.isEmpty()) {
+            return;
         }
-        MojoExecutor.executeMojo(
-                MojoExecutor.plugin(
-                        MojoExecutor.groupId(groupId),
-                        MojoExecutor.artifactId(artifactId),
-                        MojoExecutor.version(plugin.getVersion()),
+        executeIfConfigured(ORG_APACHE_MAVEN_PLUGINS, MAVEN_RESOURCES_PLUGIN, "resources");
+    }
+
+    private void executeIfConfigured(String pluginGroupId, String pluginArtifactId, String goal) throws MojoExecutionException {
+        final Plugin plugin = project.getPlugin(pluginGroupId + ":" + pluginArtifactId);
+        if (plugin == null || plugin.getExecutions().stream().noneMatch(exec -> exec.getGoals().contains(goal))) {
+            return;
+        }
+        executeMojo(
+                plugin(
+                        groupId(pluginGroupId),
+                        artifactId(pluginArtifactId),
+                        version(plugin.getVersion()),
                         plugin.getDependencies()),
-                MojoExecutor.goal("compile"),
-                configuration,
-                MojoExecutor.executionEnvironment(
+                goal(goal),
+                getPluginConfig(plugin, goal),
+                executionEnvironment(
                         project,
                         session,
                         pluginManager));
     }
 
+    private Xpp3Dom getPluginConfig(Plugin plugin, String goal) throws MojoExecutionException {
+        Xpp3Dom mergedConfig = null;
+        if (!plugin.getExecutions().isEmpty()) {
+            for (PluginExecution exec : plugin.getExecutions()) {
+                if (exec.getConfiguration() != null && exec.getGoals().contains(goal)) {
+                    mergedConfig = mergedConfig == null ? (Xpp3Dom) exec.getConfiguration()
+                            : Xpp3Dom.mergeXpp3Dom(mergedConfig, (Xpp3Dom) exec.getConfiguration(), true);
+                }
+            }
+        }
+
+        if ((Xpp3Dom) plugin.getConfiguration() != null) {
+            mergedConfig = mergedConfig == null ? (Xpp3Dom) plugin.getConfiguration()
+                    : Xpp3Dom.mergeXpp3Dom(mergedConfig, (Xpp3Dom) plugin.getConfiguration(), true);
+        }
+
+        final Xpp3Dom configuration = configuration();
+        if (mergedConfig != null) {
+            Set<String> supportedParams = null;
+            // Filter out `test*` configurations
+            for (Xpp3Dom child : mergedConfig.getChildren()) {
+                if (child.getName().startsWith("test")) {
+                    continue;
+                }
+                if (supportedParams == null) {
+                    supportedParams = getMojoDescriptor(plugin, goal).getParameterMap().keySet();
+                }
+                if (supportedParams.contains(child.getName())) {
+                    configuration.addChild(child);
+                }
+            }
+        }
+
+        return configuration;
+    }
+
+    private MojoDescriptor getMojoDescriptor(Plugin plugin, String goal) throws MojoExecutionException {
+        try {
+            return pluginManager.getMojoDescriptor(plugin, goal, repos, repoSession);
+        } catch (Exception e) {
+            throw new MojoExecutionException(
+                    "Failed to obtain descriptor for Maven plugin " + plugin.getId() + " goal " + goal, e);
+        }
+    }
+
     private Map<Path, Long> readPomFileTimestamps(DevModeRunner runner) throws IOException {
         Map<Path, Long> ret = new HashMap<>();
-        for (Path i : runner.getPomFiles()) {
+        for (Path i : runner.pomFiles()) {
             ret.put(i, Files.getLastModifiedTime(i).toMillis());
         }
         return ret;
@@ -413,7 +495,7 @@ public class DevMojo extends AbstractMojo {
         return null;
     }
 
-    private void addProject(DevModeContext devModeContext, LocalProject localProject) {
+    private void addProject(MavenDevModeLauncher.Builder builder, LocalProject localProject, boolean root) throws Exception {
 
         String projectDirectory = null;
         Set<String> sourcePaths = null;
@@ -422,7 +504,6 @@ public class DevMojo extends AbstractMojo {
 
         final MavenProject mavenProject = session.getProjectMap().get(
                 String.format("%s:%s:%s", localProject.getGroupId(), localProject.getArtifactId(), localProject.getVersion()));
-
         if (mavenProject == null) {
             projectDirectory = localProject.getDir().toAbsolutePath().toString();
             Path sourcePath = localProject.getSourcesSourcesDir().toAbsolutePath();
@@ -440,6 +521,7 @@ public class DevMojo extends AbstractMojo {
                     .map(src -> src.toAbsolutePath().toString())
                     .collect(Collectors.toSet());
         }
+        Path sourceParent = localProject.getSourcesDir().toAbsolutePath();
 
         Path classesDir = localProject.getClassesDir();
         if (Files.isDirectory(classesDir)) {
@@ -449,308 +531,366 @@ public class DevMojo extends AbstractMojo {
         if (Files.isDirectory(resourcesSourcesDir)) {
             resourcePath = resourcesSourcesDir.toAbsolutePath().toString();
         }
-        DevModeContext.ModuleInfo moduleInfo = new DevModeContext.ModuleInfo(
+
+        if (classesPath == null && (!sourcePaths.isEmpty() || resourcePath != null)) {
+            throw new MojoExecutionException("Hot reloadable dependency " + localProject.getAppArtifact()
+                    + " has not been compiled yet (the classes directory " + classesDir + " does not exist)");
+        }
+
+        Path targetDir = Paths.get(project.getBuild().getDirectory());
+
+        DevModeContext.ModuleInfo moduleInfo = new DevModeContext.ModuleInfo(localProject.getKey(),
                 localProject.getArtifactId(),
                 projectDirectory,
                 sourcePaths,
                 classesPath,
-                resourcePath);
-        devModeContext.getModules().add(moduleInfo);
-    }
-
-    private void addToClassPaths(StringBuilder classPathManifest, DevModeContext classPath, File file) {
-        final URI uri = file.toPath().toAbsolutePath().toUri();
-        try {
-            classPath.getClassPath().add(uri.toURL());
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
+                resourcePath,
+                sourceParent.toAbsolutePath().toString(),
+                targetDir.resolve("generated-sources").toAbsolutePath().toString(),
+                targetDir.toAbsolutePath().toString());
+        if (root) {
+            builder.mainModule(moduleInfo);
+        } else {
+            builder.dependency(moduleInfo);
         }
-        classPathManifest.append(uri).append(" ");
     }
 
-    class DevModeRunner {
+    private class DevModeRunner {
 
-        private static final String KOTLIN_MAVEN_PLUGIN_GA = "org.jetbrains.kotlin:kotlin-maven-plugin";
-        private final List<String> args;
+        final QuarkusDevModeLauncher launcher;
         private Process process;
-        private Set<Path> pomFiles = new HashSet<>();
 
-        DevModeRunner(List<String> args) {
-            this.args = new ArrayList<>(args);
+        private DevModeRunner() throws Exception {
+            launcher = newLauncher();
         }
 
-        /**
-         * Attempts to prepare the dev mode runner.
-         */
-        void prepare() throws Exception {
-            if (debug == null) {
-                boolean useDebugMode = true;
-                // debug mode not specified
-                // make sure 5005 is not used, we don't want to just fail if something else is using it
-                try (Socket socket = new Socket(InetAddress.getByAddress(new byte[] { 127, 0, 0, 1 }), 5005)) {
-                    getLog().error("Port 5005 in use, not starting in debug mode");
-                    useDebugMode = false;
-                } catch (IOException e) {
-                }
-                if (useDebugMode) {
-                    args.add("-Xdebug");
-                    args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:5005,server=y,suspend=" + suspend);
-                }
-            } else if (debug.toLowerCase().equals("client")) {
-                args.add("-Xdebug");
-                args.add("-Xrunjdwp:transport=dt_socket,address=localhost:5005,server=n,suspend=" + suspend);
-            } else if (debug.toLowerCase().equals("true")) {
-                args.add("-Xdebug");
-                args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:5005,server=y,suspend=" + suspend);
-            } else if (!debug.toLowerCase().equals("false")) {
-                try {
-                    int port = Integer.parseInt(debug);
-                    if (port <= 0) {
-                        throw new MojoFailureException("The specified debug port must be greater than 0");
-                    }
-                    args.add("-Xdebug");
-                    args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:" + port + ",server=y,suspend=" + suspend);
-                } catch (NumberFormatException e) {
-                    throw new MojoFailureException(
-                            "Invalid value for debug parameter: " + debug + " must be true|false|client|{port}");
-                }
-            }
-            //build a class-path string for the base platform
-            //this stuff does not change
-            // Do not include URIs in the manifest, because some JVMs do not like that
-            StringBuilder classPathManifest = new StringBuilder();
-            final DevModeContext devModeContext = new DevModeContext();
-            for (Map.Entry<Object, Object> e : System.getProperties().entrySet()) {
-                devModeContext.getSystemProperties().put(e.getKey().toString(), (String) e.getValue());
-            }
-            devModeContext.setProjectDir(project.getFile().getParentFile());
-            devModeContext.getBuildSystemProperties().putAll((Map) project.getProperties());
-
-            //  this is a minor hack to allow ApplicationConfig to be populated with defaults
-            devModeContext.getBuildSystemProperties().putIfAbsent("quarkus.application.name", project.getArtifactId());
-            devModeContext.getBuildSystemProperties().putIfAbsent("quarkus.application.version", project.getVersion());
-
-            devModeContext.setSourceEncoding(getSourceEncoding());
-            devModeContext.setSourceJavaVersion(source);
-            devModeContext.setTargetJvmVersion(target);
-
-            // Set compilation flags.  Try the explicitly given configuration first.  Otherwise,
-            // refer to the configuration of the Maven Compiler Plugin.
-            if (compilerArgs != null) {
-                devModeContext.setCompilerOptions(compilerArgs);
-            } else {
-                for (Plugin plugin : project.getBuildPlugins()) {
-                    if (!plugin.getKey().equals("org.apache.maven.plugins:maven-compiler-plugin")) {
-                        continue;
-                    }
-                    Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) plugin.getConfiguration();
-                    if (compilerPluginConfiguration == null) {
-                        continue;
-                    }
-                    Xpp3Dom compilerPluginArgsConfiguration = compilerPluginConfiguration.getChild("compilerArgs");
-                    if (compilerPluginArgsConfiguration == null) {
-                        continue;
-                    }
-                    List<String> compilerPluginArgs = new ArrayList<>();
-                    for (Xpp3Dom argConfiguration : compilerPluginArgsConfiguration.getChildren()) {
-                        compilerPluginArgs.add(argConfiguration.getValue());
-                    }
-                    devModeContext.setCompilerOptions(compilerPluginArgs);
-                    break;
-                }
-            }
-
-            setKotlinSpecificFlags(devModeContext);
-            final LocalProject localProject;
-            if (noDeps) {
-                localProject = LocalProject.load(outputDirectory.toPath());
-                addProject(devModeContext, localProject);
-                pomFiles.add(localProject.getDir().resolve("pom.xml"));
-            } else {
-                localProject = LocalProject.loadWorkspace(outputDirectory.toPath());
-                for (LocalProject project : localProject.getSelfWithLocalDeps()) {
-                    if (project.getClassesDir() != null &&
-                    //if this project also contains Quarkus extensions we do no want to include these in the discovery
-                    //a bit of an edge case, but if you try and include a sample project with your extension you will
-                    //run into problems without this
-                            (Files.exists(project.getClassesDir().resolve("META-INF/quarkus-extension.properties")) ||
-                                    Files.exists(project.getClassesDir().resolve("META-INF/quarkus-build-steps.list")))) {
-                        continue;
-                    }
-                    addProject(devModeContext, project);
-                    pomFiles.add(project.getDir().resolve("pom.xml"));
-                }
-            }
-
-            addQuarkusDevModeDeps(classPathManifest, devModeContext);
-
-            args.add("-Djava.util.logging.manager=org.jboss.logmanager.LogManager");
-            //wiring devmode is used for CDI beans that are not part of the user application (i.e. beans in 3rd party jars)
-            //we need this because these beans cannot be loaded by the runtime class loader, they must be loaded by the platform
-            //class loader
-            File wiringClassesDirectory = new File(buildDir, "wiring-devmode");
-            wiringClassesDirectory.mkdirs();
-
-            addToClassPaths(classPathManifest, devModeContext, wiringClassesDirectory);
-
-            //in most cases these are not used, however they need to be present for some
-            //parent-first cases such as logging
-            for (Artifact appDep : project.getArtifacts()) {
-                addToClassPaths(classPathManifest, devModeContext, appDep.getFile());
-            }
-
-            //now we need to build a temporary jar to actually run
-
-            File tempFile = new File(buildDir, project.getArtifactId() + "-dev.jar");
-            tempFile.delete();
-            // Only delete the -dev.jar on exit if requested
-            if (deleteDevJar) {
-                tempFile.deleteOnExit();
-            }
-            getLog().debug("Executable jar: " + tempFile.getAbsolutePath());
-
-            devModeContext.getClassesRoots().add(outputDirectory.getAbsoluteFile());
-            devModeContext.setFrameworkClassesDir(wiringClassesDirectory.getAbsoluteFile());
-            devModeContext.setCacheDir(new File(buildDir, "transformer-cache").getAbsoluteFile());
-
-            // this is the jar file we will use to launch the dev mode main class
-            devModeContext.setDevModeRunnerJarFile(tempFile);
-            try (ZipOutputStream out = new ZipOutputStream(new FileOutputStream(tempFile))) {
-                out.putNextEntry(new ZipEntry("META-INF/"));
-                Manifest manifest = new Manifest();
-                manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0");
-                manifest.getMainAttributes().put(Attributes.Name.CLASS_PATH, classPathManifest.toString());
-                manifest.getMainAttributes().put(Attributes.Name.MAIN_CLASS, DevModeMain.class.getName());
-                out.putNextEntry(new ZipEntry("META-INF/MANIFEST.MF"));
-                manifest.write(out);
-
-                out.putNextEntry(new ZipEntry(DevModeMain.DEV_MODE_CONTEXT));
-                ByteArrayOutputStream bytes = new ByteArrayOutputStream();
-                ObjectOutputStream obj = new ObjectOutputStream(new DataOutputStream(bytes));
-                obj.writeObject(devModeContext);
-                obj.close();
-                out.write(bytes.toByteArray());
-            }
-
-            outputDirectory.mkdirs();
-
-            args.add("-jar");
-            args.add(tempFile.getAbsolutePath());
-
+        Collection<Path> pomFiles() {
+            return launcher.watchedBuildFiles();
         }
 
-        private void addQuarkusDevModeDeps(StringBuilder classPathManifest, final DevModeContext devModeContext)
-                throws MojoExecutionException, DependencyResolutionException {
-            final String pomPropsPath = "META-INF/maven/io.quarkus/quarkus-development-mode/pom.properties";
-            final InputStream devModePomPropsIs = DevModeMain.class.getClassLoader().getResourceAsStream(pomPropsPath);
-            if (devModePomPropsIs == null) {
-                throw new MojoExecutionException("Failed to locate " + pomPropsPath + " on the classpath");
-            }
-            final Properties devModeProps = new Properties();
-            try (InputStream is = devModePomPropsIs) {
-                devModeProps.load(is);
-            } catch (IOException e) {
-                throw new MojoExecutionException("Failed to load " + pomPropsPath + " from the classpath", e);
-            }
-            final String devModeGroupId = devModeProps.getProperty("groupId");
-            if (devModeGroupId == null) {
-                throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing groupId");
-            }
-            final String devModeArtifactId = devModeProps.getProperty("artifactId");
-            if (devModeArtifactId == null) {
-                throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing artifactId");
-            }
-            final String devModeVersion = devModeProps.getProperty("version");
-            if (devModeVersion == null) {
-                throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing version");
-            }
-
-            final DefaultArtifact devModeJar = new DefaultArtifact(devModeGroupId, devModeArtifactId, "jar", devModeVersion);
-            final DependencyResult cpRes = repoSystem.resolveDependencies(repoSession,
-                    new DependencyRequest()
-                            .setCollectRequest(
-                                    new CollectRequest()
-                                            .setRoot(new org.eclipse.aether.graph.Dependency(devModeJar, JavaScopes.RUNTIME))
-                                            .setRepositories(repos)));
-
-            for (ArtifactResult appDep : cpRes.getArtifactResults()) {
-                File file = appDep.getArtifact().getFile();
-                addToClassPaths(classPathManifest, devModeContext, file);
-            }
+        boolean alive() {
+            return process == null ? false : process.isAlive();
         }
 
-        private void setKotlinSpecificFlags(DevModeContext devModeContext) {
-            Plugin kotlinMavenPlugin = null;
-            for (Plugin plugin : project.getBuildPlugins()) {
-                if (plugin.getKey().equals(KOTLIN_MAVEN_PLUGIN_GA)) {
-                    kotlinMavenPlugin = plugin;
-                    break;
-                }
-            }
-
-            if (kotlinMavenPlugin == null) {
-                return;
-            }
-
-            getLog().debug("Kotlin Maven plugin detected");
-
-            List<String> compilerPluginArtifacts = new ArrayList<>();
-            List<Dependency> dependencies = kotlinMavenPlugin.getDependencies();
-            for (Dependency dependency : dependencies) {
-                try {
-                    ArtifactResult resolvedArtifact = repoSystem.resolveArtifact(repoSession,
-                            new ArtifactRequest()
-                                    .setArtifact(new DefaultArtifact(dependency.getGroupId(), dependency.getArtifactId(),
-                                            dependency.getClassifier(), dependency.getType(), dependency.getVersion()))
-                                    .setRepositories(repos));
-
-                    compilerPluginArtifacts.add(resolvedArtifact.getArtifact().getFile().toPath().toAbsolutePath().toString());
-                } catch (ArtifactResolutionException e) {
-                    getLog().warn("Unable to properly setup dev-mode for Kotlin", e);
-                    return;
-                }
-            }
-            devModeContext.setCompilerPluginArtifacts(compilerPluginArtifacts);
-
-            List<String> options = new ArrayList<>();
-            Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) kotlinMavenPlugin.getConfiguration();
-            if (compilerPluginConfiguration != null) {
-                Xpp3Dom compilerPluginArgsConfiguration = compilerPluginConfiguration.getChild("pluginOptions");
-                if (compilerPluginArgsConfiguration != null) {
-                    for (Xpp3Dom argConfiguration : compilerPluginArgsConfiguration.getChildren()) {
-                        options.add(argConfiguration.getValue());
-                    }
-                }
-            }
-            devModeContext.setCompilerPluginsOptions(options);
+        int exitValue() {
+            return process == null ? -1 : process.exitValue();
         }
 
-        public Set<Path> getPomFiles() {
-            return pomFiles;
-        }
-
-        public void run() throws Exception {
+        void run() throws Exception {
             // Display the launch command line in dev mode
             if (getLog().isDebugEnabled()) {
-                getLog().debug("Launching JVM with command line: " + args.stream().collect(joining(" ")));
+                getLog().debug("Launching JVM with command line: " + String.join(" ", launcher.args()));
             }
-            process = new ProcessBuilder(args)
+            final ProcessBuilder processBuilder = new ProcessBuilder(launcher.args())
+                    .redirectErrorStream(true)
                     .inheritIO()
-                    .directory(workingDir)
-                    .start();
+                    .directory(workingDir == null ? buildDir : workingDir);
+            if (!environmentVariables.isEmpty()) {
+                processBuilder.environment().putAll(environmentVariables);
+            }
+            process = processBuilder.start();
+
             //https://github.com/quarkusio/quarkus/issues/232
             Runtime.getRuntime().addShutdownHook(new Thread(new Runnable() {
                 @Override
                 public void run() {
                     process.destroy();
+                    try {
+                        process.waitFor();
+                    } catch (InterruptedException ignored) {
+                        getLog().warn("Unable to properly wait for dev-mode end", ignored);
+                    }
                 }
             }, "Development Mode Shutdown Hook"));
         }
 
-        public void stop() throws InterruptedException {
+        void stop() throws InterruptedException {
             process.destroy();
             process.waitFor();
         }
+    }
 
+    private QuarkusDevModeLauncher newLauncher() throws Exception {
+        String java = null;
+        // See if a toolchain is configured
+        if (toolchainManager != null) {
+            Toolchain toolchain = toolchainManager.getToolchainFromBuildContext("jdk", session);
+            if (toolchain != null) {
+                java = toolchain.findTool("java");
+                getLog().info("JVM from toolchain: " + java);
+            }
+        }
+
+        final MavenDevModeLauncher.Builder builder = MavenDevModeLauncher.builder(java, getLog())
+                .preventnoverify(preventnoverify)
+                .buildDir(buildDir)
+                .outputDir(outputDirectory)
+                .suspend(suspend)
+                .debug(debug)
+                .debugHost(debugHost)
+                .debugPortOk(debugPortOk)
+                .deleteDevJar(deleteDevJar);
+
+        setJvmArgs(builder);
+
+        builder.projectDir(project.getFile().getParentFile());
+        builder.buildSystemProperties((Map) project.getProperties());
+
+        builder.applicationName(project.getArtifactId());
+        builder.applicationVersion(project.getVersion());
+
+        builder.sourceEncoding(getSourceEncoding());
+
+        // Set compilation flags.  Try the explicitly given configuration first.  Otherwise,
+        // refer to the configuration of the Maven Compiler Plugin.
+        final Optional<Xpp3Dom> compilerPluginConfiguration = findCompilerPluginConfiguration();
+        if (compilerArgs != null) {
+            builder.compilerOptions(compilerArgs);
+        } else if (compilerPluginConfiguration.isPresent()) {
+            final Xpp3Dom compilerPluginArgsConfiguration = compilerPluginConfiguration.get().getChild("compilerArgs");
+            if (compilerPluginArgsConfiguration != null) {
+                List<String> compilerPluginArgs = new ArrayList<>();
+                for (Xpp3Dom argConfiguration : compilerPluginArgsConfiguration.getChildren()) {
+                    compilerPluginArgs.add(argConfiguration.getValue());
+                }
+                // compilerArgs can also take a value without using arg
+                if (compilerPluginArgsConfiguration.getValue() != null
+                        && !compilerPluginArgsConfiguration.getValue().isEmpty()) {
+                    compilerPluginArgs.add(compilerPluginArgsConfiguration.getValue().trim());
+                }
+                builder.compilerOptions(compilerPluginArgs);
+            }
+        }
+        if (source != null) {
+            builder.sourceJavaVersion(source);
+        } else if (compilerPluginConfiguration.isPresent()) {
+            final Xpp3Dom javacSourceVersion = compilerPluginConfiguration.get().getChild("source");
+            if (javacSourceVersion != null && javacSourceVersion.getValue() != null
+                    && !javacSourceVersion.getValue().trim().isEmpty()) {
+                builder.sourceJavaVersion(javacSourceVersion.getValue().trim());
+            }
+        }
+        if (target != null) {
+            builder.targetJavaVersion(target);
+        } else if (compilerPluginConfiguration.isPresent()) {
+            final Xpp3Dom javacTargetVersion = compilerPluginConfiguration.get().getChild("target");
+            if (javacTargetVersion != null && javacTargetVersion.getValue() != null
+                    && !javacTargetVersion.getValue().trim().isEmpty()) {
+                builder.targetJavaVersion(javacTargetVersion.getValue().trim());
+            }
+        }
+
+        setKotlinSpecificFlags(builder);
+        if (noDeps) {
+            final LocalProject localProject = LocalProject.load(project.getModel().getPomFile().toPath());
+            addProject(builder, localProject, true);
+            builder.watchedBuildFile(localProject.getRawModel().getPomFile().toPath());
+            builder.localArtifact(new AppArtifactKey(localProject.getGroupId(), localProject.getArtifactId(), null, "jar"));
+        } else {
+            final LocalProject localProject = LocalProject.loadWorkspace(project.getModel().getPomFile().toPath());
+            for (LocalProject project : DependenciesFilter.filterNotReloadableDependencies(localProject,
+                    this.project.getArtifacts(), repoSystem, repoSession, repos)) {
+                addProject(builder, project, project == localProject);
+                builder.watchedBuildFile(project.getRawModel().getPomFile().toPath());
+                builder.localArtifact(new AppArtifactKey(project.getGroupId(), project.getArtifactId(), null, "jar"));
+            }
+        }
+
+        addQuarkusDevModeDeps(builder);
+
+        //in most cases these are not used, however they need to be present for some
+        //parent-first cases such as logging
+        //first we go through and get all the parent first artifacts
+        Set<AppArtifactKey> parentFirstArtifacts = new HashSet<>();
+        for (Artifact appDep : project.getArtifacts()) {
+            if (appDep.getArtifactHandler().getExtension().equals("jar") && appDep.getFile().isFile()) {
+                try (ZipFile file = new ZipFile(appDep.getFile())) {
+                    ZipEntry entry = file.getEntry(EXT_PROPERTIES_PATH);
+                    if (entry != null) {
+                        Properties p = new Properties();
+                        try (InputStream inputStream = file.getInputStream(entry)) {
+                            p.load(inputStream);
+                            String parentFirst = p.getProperty(AppModel.PARENT_FIRST_ARTIFACTS);
+                            if (parentFirst != null) {
+                                String[] artifacts = parentFirst.split(",");
+                                for (String artifact : artifacts) {
+                                    parentFirstArtifacts.add(new AppArtifactKey(artifact.split(":")));
+                                }
+                            }
+                        }
+
+                    }
+                }
+            }
+        }
+        for (Artifact appDep : project.getArtifacts()) {
+            // only add the artifact if it's present in the dev mode context
+            // we need this to avoid having jars on the classpath multiple times
+            AppArtifactKey key = new AppArtifactKey(appDep.getGroupId(), appDep.getArtifactId(),
+                    appDep.getClassifier(), appDep.getArtifactHandler().getExtension());
+            if (!builder.isLocal(key) && parentFirstArtifacts.contains(key)) {
+                builder.classpathEntry(appDep.getFile());
+            }
+        }
+
+        builder.baseName(project.getBuild().getFinalName());
+
+        modifyDevModeContext(builder);
+
+        if (argsString != null) {
+            builder.applicationArgs(argsString);
+        }
+        propagateUserProperties(builder);
+
+        return builder.build();
+    }
+
+    private void setJvmArgs(Builder builder) throws Exception {
+        String jvmArgs = this.jvmArgs;
+        if (!systemProperties.isEmpty()) {
+            final StringBuilder buf = new StringBuilder();
+            if (jvmArgs != null) {
+                buf.append(jvmArgs);
+            }
+            for (Map.Entry<String, String> prop : systemProperties.entrySet()) {
+                buf.append(" -D").append(prop.getKey()).append("=\"").append(prop.getValue()).append("\"");
+            }
+            jvmArgs = buf.toString();
+        }
+        if (jvmArgs != null) {
+            builder.jvmArgs(Arrays.asList(CommandLineUtils.translateCommandline(jvmArgs)));
+        }
+
+    }
+
+    private void propagateUserProperties(MavenDevModeLauncher.Builder builder) {
+        Properties userProps = BootstrapMavenOptions.newInstance().getSystemProperties();
+        if (userProps == null) {
+            return;
+        }
+        final StringBuilder buf = new StringBuilder();
+        buf.append("-D");
+        for (Object o : userProps.keySet()) {
+            String name = o.toString();
+            final String value = userProps.getProperty(name);
+            buf.setLength(2);
+            buf.append(name);
+            if (value != null && !value.isEmpty()) {
+                buf.append('=');
+                buf.append(value);
+            }
+            builder.jvmArgs(buf.toString());
+        }
+    }
+
+    private void addQuarkusDevModeDeps(MavenDevModeLauncher.Builder builder)
+            throws MojoExecutionException, DependencyResolutionException {
+        final String pomPropsPath = "META-INF/maven/io.quarkus/quarkus-core-deployment/pom.properties";
+        final InputStream devModePomPropsIs = DevModeMain.class.getClassLoader().getResourceAsStream(pomPropsPath);
+        if (devModePomPropsIs == null) {
+            throw new MojoExecutionException("Failed to locate " + pomPropsPath + " on the classpath");
+        }
+        final Properties devModeProps = new Properties();
+        try (InputStream is = devModePomPropsIs) {
+            devModeProps.load(is);
+        } catch (IOException e) {
+            throw new MojoExecutionException("Failed to load " + pomPropsPath + " from the classpath", e);
+        }
+        final String devModeGroupId = devModeProps.getProperty("groupId");
+        if (devModeGroupId == null) {
+            throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing groupId");
+        }
+        final String devModeArtifactId = devModeProps.getProperty("artifactId");
+        if (devModeArtifactId == null) {
+            throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing artifactId");
+        }
+        final String devModeVersion = devModeProps.getProperty("version");
+        if (devModeVersion == null) {
+            throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing version");
+        }
+
+        final DefaultArtifact devModeJar = new DefaultArtifact(devModeGroupId, devModeArtifactId, "jar", devModeVersion);
+        final DependencyResult cpRes = repoSystem.resolveDependencies(repoSession,
+                new DependencyRequest()
+                        .setCollectRequest(
+                                new CollectRequest()
+                                        .setRoot(new org.eclipse.aether.graph.Dependency(devModeJar, JavaScopes.RUNTIME))
+                                        .setRepositories(repos)));
+
+        for (ArtifactResult appDep : cpRes.getArtifactResults()) {
+            //we only use the launcher for launching from the IDE, we need to exclude it
+            if (!(appDep.getArtifact().getGroupId().equals("io.quarkus")
+                    && appDep.getArtifact().getArtifactId().equals("quarkus-ide-launcher"))) {
+                if (appDep.getArtifact().getGroupId().equals("io.quarkus")
+                        && appDep.getArtifact().getArtifactId().equals("quarkus-class-change-agent")) {
+                    builder.jvmArgs("-javaagent:" + appDep.getArtifact().getFile().getAbsolutePath());
+                } else {
+                    builder.classpathEntry(appDep.getArtifact().getFile());
+                }
+            }
+        }
+    }
+
+    private void setKotlinSpecificFlags(MavenDevModeLauncher.Builder builder) {
+        Plugin kotlinMavenPlugin = null;
+        for (Plugin plugin : project.getBuildPlugins()) {
+            if (plugin.getKey().equals(KOTLIN_MAVEN_PLUGIN_GA)) {
+                kotlinMavenPlugin = plugin;
+                break;
+            }
+        }
+
+        if (kotlinMavenPlugin == null) {
+            return;
+        }
+
+        getLog().debug("Kotlin Maven plugin detected");
+
+        List<String> compilerPluginArtifacts = new ArrayList<>();
+        List<Dependency> dependencies = kotlinMavenPlugin.getDependencies();
+        for (Dependency dependency : dependencies) {
+            try {
+                ArtifactResult resolvedArtifact = repoSystem.resolveArtifact(repoSession,
+                        new ArtifactRequest()
+                                .setArtifact(new DefaultArtifact(dependency.getGroupId(), dependency.getArtifactId(),
+                                        dependency.getClassifier(), dependency.getType(), dependency.getVersion()))
+                                .setRepositories(repos));
+
+                compilerPluginArtifacts.add(resolvedArtifact.getArtifact().getFile().toPath().toAbsolutePath().toString());
+            } catch (ArtifactResolutionException e) {
+                getLog().warn("Unable to properly setup dev-mode for Kotlin", e);
+                return;
+            }
+        }
+        builder.compilerPluginArtifacts(compilerPluginArtifacts);
+
+        List<String> options = new ArrayList<>();
+        Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) kotlinMavenPlugin.getConfiguration();
+        if (compilerPluginConfiguration != null) {
+            Xpp3Dom compilerPluginArgsConfiguration = compilerPluginConfiguration.getChild("pluginOptions");
+            if (compilerPluginArgsConfiguration != null) {
+                for (Xpp3Dom argConfiguration : compilerPluginArgsConfiguration.getChildren()) {
+                    options.add(argConfiguration.getValue());
+                }
+            }
+        }
+        builder.compilerPluginOptions(options);
+    }
+
+    protected void modifyDevModeContext(MavenDevModeLauncher.Builder builder) {
+
+    }
+
+    private Optional<Xpp3Dom> findCompilerPluginConfiguration() {
+        for (final Plugin plugin : project.getBuildPlugins()) {
+            if (!plugin.getKey().equals("org.apache.maven.plugins:maven-compiler-plugin")) {
+                continue;
+            }
+            final Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) plugin.getConfiguration();
+            if (compilerPluginConfiguration != null) {
+                return Optional.of(compilerPluginConfiguration);
+            }
+        }
+        return Optional.empty();
     }
 }
