@@ -1,11 +1,15 @@
 package io.quarkus.bootstrap.classloading;
 
+import java.io.File;
 import java.io.IOException;
+import java.io.InterruptedIOException;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.security.CodeSource;
 import java.security.ProtectionDomain;
 import java.security.cert.Certificate;
@@ -23,12 +27,43 @@ public class DirectoryClassPathElement extends AbstractClassPathElement {
 
     public DirectoryClassPathElement(Path root) {
         assert root != null : "root is null";
-        this.root = root;
+        this.root = root.normalize();
+    }
+
+    @Override
+    public Path getRoot() {
+        return root;
     }
 
     @Override
     public ClassPathResource getResource(String name) {
-        Path file = root.resolve(name);
+        final Path file;
+        try {
+            file = root.resolve(name);
+        } catch (InvalidPathException ipe) {
+            // can't resolve the resource
+            return null;
+        }
+        Path normal = file.normalize();
+        String cn = name;
+        if (File.separatorChar == '\\') {
+            cn = cn.replace("/", "\\");
+        }
+        if (!normal.startsWith(file)) {
+            //don't allow directory escapes
+            return null;
+        }
+        if (normal.toString().equals(cn)) {
+            //this means that name is absolute (windows only, as the / would have been removed on linux)
+            //we don't allow absolute paths
+            return null;
+        }
+        if (!normal.endsWith(Paths.get(cn)) && !cn.isEmpty()) {
+            //make sure the case is correct
+            //if the file on disk does not match the case of name return null
+            return null;
+        }
+
         if (Files.exists(file)) {
             return new ClassPathResource() {
                 @Override
@@ -44,7 +79,15 @@ public class DirectoryClassPathElement extends AbstractClassPathElement {
                 @Override
                 public URL getUrl() {
                     try {
-                        return file.toUri().toURL();
+                        URI uri = file.toUri();
+                        // the URLClassLoader doesn't add trailing slashes to directories, so we make sure we return
+                        // the same URL as it would to avoid having QuarkusClassLoader return different URLs
+                        // (one with a trailing slash and one without) for same resource
+                        if (uri.getPath().endsWith("/")) {
+                            String uriStr = uri.toString();
+                            return new URL(uriStr.substring(0, uriStr.length() - 1));
+                        }
+                        return uri.toURL();
                     } catch (MalformedURLException e) {
                         throw new RuntimeException(e);
                     }
@@ -53,10 +96,22 @@ public class DirectoryClassPathElement extends AbstractClassPathElement {
                 @Override
                 public byte[] getData() {
                     try {
-                        return Files.readAllBytes(file);
+                        try {
+                            return Files.readAllBytes(file);
+                        } catch (InterruptedIOException e) {
+                            //if we are interrupted reading data we finish the op, then just re-interrupt the thread state
+                            byte[] bytes = Files.readAllBytes(file);
+                            Thread.currentThread().interrupt();
+                            return bytes;
+                        }
                     } catch (IOException e) {
                         throw new RuntimeException("Unable to read " + file, e);
                     }
+                }
+
+                @Override
+                public boolean isDirectory() {
+                    return Files.isDirectory(file);
                 }
             };
         }
